--- a/src/Home.css
+++ b/src/Home.css
@@ -6,6 +6,28 @@
     max-width:1500px;
 }
 
+.home__carouselContainer {
+    display:flex;
+    overflow:scroll;
+    scroll-behavior: auto;
+    z-index: -1;
+    margin-bottom: -150px;
+    transition: all 0.5s;
+}
+
+.home__carouselActions {
+    display:flex;
+    justify-content: space-between;
+    z-index: -2;
+    width:300px;
+    height:20px;
+}
+
+.home__carousel {
+    display:flex;
+    margin-left:0%;
+}
+
 .home__row {
     display: flex;
     z-index: 1;
@@ -13,9 +35,8 @@
 }
 
 .home__image {
-    z-index: -1;
-    width: 100%;
-    margin-bottom: -150px;
+    width:100%;
     mask-image: linear-gradient(to bottom, rgba(0,0,0, 1), rgba(0,0,0,0));
+    object-fit:cover;
 }
 
